# furrk-rust-bot

./: Cargo.toml  Dockerfile  Jenkinsfile  README.md
src/: database.rs  errors.rs  jwt_token.rs  main.rs  models.rs  state.rs
src/commands/: help.rs  login.rs  mod.rs  register.rs  start.rs
src/extractors/: e621.rs  furaffinity.rs  mod.rs  twitter.rs
