[package]
name = "furrk-rust-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = { version = "0.8.4", features = ["macros"] }
chrono = "0.4.42"
dotenv = "0.15.0"
frankenstein = { version = "0.44.0", features = ["client-reqwest"] }
jsonwebtoken = "9.3.1"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres"] }
tokio = { version = "1.47.1", features = ["full"] }
tokio-cron-scheduler = "0.14.0"
url = { version = "2.5.7", features = ["serde"] }
